Fix vertical alignment of Contents link

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -48,7 +48,7 @@
   @include left-margin;
   padding-left: 0;
   @include media(desktop){
-    margin-top: 20px;
+    margin-top: 28px;
   }
   li { 
     list-style: none;
@@ -80,7 +80,7 @@
     margin-left: $margin - 7px;
   }
   display: block;
-  margin-top: 2px;
+  margin-top: 10px;
   width: $section-index-width;
   padding-bottom: 15px;
   background-color: #fff;
@@ -115,7 +115,7 @@
 //
 .meta{
   @include left-margin;
-  margin-top: 25px;
+  margin-top: 35px;
   margin-bottom: 0;
   padding: 0;
   font-size: 16px;
